# fieldnotes

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  alertmanager.py  backends.py  github_actions.py  loki.py  main.py  models.py  pyproject.toml  service_map.py
.github/workflows/: ci.yml
tests/: test_alertmanager.py  test_github_actions.py  test_loki.py  test_main.py  test_models.py  test_service_map.py
