[project]
name = "fieldnotes"
version = "0.1.0"
description = "Read-only MCP server for on-call engineers: recent deploys, recent logs, firing alerts."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
